[FIX] Set app nw window icon

--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "height": 650,
     "min_width": 768,
     "min_height": 100,
-    "title": "Ripple Admin Console"
+    "title": "Ripple Admin Console",
+    "icon": "../img/mobile/icon196.png"
   }
 }
