Install bufferutil and utf-8-validate from github
These two packages needs node-gyp-build 3.6.0. The version is updated in github. But hasn't been released on npmjs.org yet.

--- a/package.json
+++ b/package.json
@@ -118,5 +118,8 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack-stream": "^5.2.1"
   },
-  "optionalDependencies": {}
+  "optionalDependencies": {
+    "bufferutil": "github:websockets/bufferutil",
+    "utf-8-validate": "github:websockets/utf-8-validate"
+  }
 }
