Add ripple-lib-0.13.0-rc6/src/core directory as src/js/deprecated, import it as window.deprecated so no need to import it in every file.
Also import new ripple-lib RippleAPI directly as window.RippleAPI.

--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "node-gyp-build": "^3.6.0",
     "nw": "^0.35.2",
     "run-sequence": "^2.2.1",
+    "sjcl-codec": "^0.1.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack-stream": "^5.2.1"
   },
