--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "spin": "0.0.1",
     "store": "^2.0.12",
     "tls": "0.0.1",
-    "webpack": "^4.27.1",
+    "webpack": "^4.28.1",
     "ws": "^6.1.2"
   },
   "license": "ISC",
@@ -74,8 +74,8 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "babel-loader": "^8.0.4",
-    "bootstrap": "^4.1.3",
+    "babel-loader": "^8.0.5",
+    "bootstrap": "^4.2.1",
     "browser-sync": "^2.26.3",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
@@ -105,18 +105,18 @@
     "gulp-useref": "^3.1.6",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.2.0",
-    "karma": "~3.1.3",
+    "karma": "^3.1.4",
     "karma-cli": "2.0.0",
     "karma-firefox-launcher": "~1.1.0",
     "karma-mocha": "~1.3.0",
     "karma-sinon-chai": "~2.0.2",
     "merge-stream": "^1.0.1",
     "mime": "~2.4.0",
-    "node-gyp-build": "^3.6.0",
-    "nw": "^0.35.3",
+    "node-gyp-build": "^3.7.0",
+    "nw": "^0.35.4",
     "run-sequence": "^2.2.1",
     "sjcl-codec": "^0.1.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack-stream": "^5.2.1"
   },
   "optionalDependencies": {
