--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "angular": "^1.7.5",
     "angular-messages": "^1.7.5",
     "angular-route": "^1.7.5",
-    "angular-ui-bootstrap": "^2.5.6",
     "async": "~2.6.1",
-    "bootstrap-datetimepicker": "0.0.7",
     "bootstrap-less": "^3.3.8",
     "extend": "~3.0.2",
     "font-awesome": "^4.7.0",
@@ -62,6 +60,8 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.2.1",
     "browser-sync": "^2.26.3",
     "chai": "~4.2.0",
@@ -92,17 +92,21 @@
     "gulp-useref": "^3.1.6",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.2.0",
+    "inspectpack": "^4.1.2",
     "karma": "^3.1.4",
     "karma-cli": "2.0.0",
     "karma-firefox-launcher": "~1.1.0",
     "karma-mocha": "~1.3.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "merge-stream": "^1.0.1",
     "mime": "~2.4.0",
     "node-gyp-build": "^3.7.0",
     "nw": "^0.36.3",
     "run-sequence": "^2.2.1",
+    "terser-webpack-plugin": "^1.2.3",
     "tls": "0.0.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.2.3",
     "webpack-stream": "^5.2.1"
   },
   "optionalDependencies": {
