--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "safari > 8", "not ie < 11"]
+      }
+    }]
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "lodash"
+  ]
 }
