--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "min_height": 100
   },
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
-    "angular": "^1.7.5",
-    "angular-messages": "^1.7.5",
-    "angular-route": "^1.7.5",
-    "async": "~2.6.1",
+    "@babel/runtime": "^7.3.4",
+    "angular": "^1.7.8",
+    "angular-messages": "^1.7.8",
+    "angular-route": "^1.7.8",
+    "async": "^2.6.2",
     "bootstrap-less": "^3.3.8",
     "extend": "~3.0.2",
     "font-awesome": "^4.7.0",
@@ -31,7 +31,7 @@
     "jade-loader": "~0.8.0",
     "jquery": "^3.3.1",
     "jsdom": "~13.1.0",
-    "jshint": "^2.9.7",
+    "jshint": "^2.10.1",
     "jshint-loader": "~0.8.4",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
@@ -44,8 +44,8 @@
     "ripple-lib-orderbook": "^1.0.0",
     "ripple-lib-value": "^0.1.0",
     "setimmediate": "^1.0.2",
-    "webpack": "^4.28.1",
-    "ws": "^6.1.2"
+    "webpack": "^4.29.6",
+    "ws": "^6.2.0"
   },
   "license": "ISC",
   "scripts": {
@@ -57,12 +57,12 @@
   },
   "readmeFilename": "README",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
     "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.7.0",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
@@ -83,12 +83,12 @@
     "gulp-less": "^3.5.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-html": "^1.0.4",
-    "gulp-preprocess": "^3.0.1",
+    "gulp-preprocess": "^3.0.2",
     "gulp-rev": "^9.0.0",
     "gulp-rev-replace": "^0.4.4",
     "gulp-shell": "^0.6.5",
     "gulp-size": "^3.0.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-useref": "^3.1.6",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.2.0",
@@ -100,8 +100,8 @@
     "lodash-webpack-plugin": "^0.11.5",
     "merge-stream": "^1.0.1",
     "mime": "~2.4.0",
-    "node-gyp-build": "^3.7.0",
-    "nw": "^0.36.3",
+    "node-gyp-build": "^3.8.0",
+    "nw": "^0.36.4",
     "run-sequence": "^2.2.1",
     "terser-webpack-plugin": "^1.2.3",
     "tls": "0.0.1",
